<resources>
    <string name="app_name">SOPT27</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="name">Name</string>
    <string name="hint_name">name</string>
    <string name="passwordCheck">Password Check</string>
    <string name="hint_password_check">password Check</string>
    <string name="move_register">Register</string>
    <string name="register">SignUp</string>
    <string name="login">SignIn</string>
    <string name="user">User</string>
    <string name="search">Search</string>
    <string name="hint_search">Please enter the keyword</string>
    <string name="page">Page %d / 50</string>
    <string name="welcome">Welcome</string>
    <string name="info">info</string>
    <string name="other">other</string>
    <string name="home">Home</string>
    <string name="logout">logout ?</string>
</resources>
