<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="signInViewModel"
            type="com.kimym.onsopt.ui.signin.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ui.signin.SignInActivity">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="100dp"
            android:layout_marginHorizontal="32dp"
            android:src="@drawable/logo_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:text="@string/email"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            android:fontFamily="@font/cairo"
            android:textFontWeight="700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_logo" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="40dp"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:importantForAutofill="no"
            android:text="@={signInViewModel.email}"
            android:padding="12dp"
            android:fontFamily="@font/cairo"
            android:textFontWeight="400"
            ifActive="@{signInViewModel.email}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_email"
            app:layout_constraintTop_toBottomOf="@id/tv_email" />

        <TextView
            android:id="@+id/tv_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            android:fontFamily="@font/cairo"
            android:textFontWeight="700"
            app:layout_constraintStart_toStartOf="@id/tv_email"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <EditText
            android:id="@+id/et_pw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:importantForAutofill="no"
            android:text="@={signInViewModel.password}"
            android:padding="12dp"
            android:fontFamily="@font/cairo"
            android:textFontWeight="400"
            ifActive="@{signInViewModel.password}"
            app:layout_constraintEnd_toEndOf="@id/et_email"
            app:layout_constraintStart_toStartOf="@id/tv_email"
            app:layout_constraintTop_toBottomOf="@id/tv_pw" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/move_register"
            android:textSize="16sp"
            android:textColor="@color/yellow"
            android:fontFamily="@font/cairo"
            android:textFontWeight="600"
            app:layout_constraintStart_toStartOf="@id/et_pw"
            app:layout_constraintEnd_toEndOf="@id/et_pw"
            app:layout_constraintTop_toBottomOf="@id/et_pw" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:fontFamily="@font/cairo"
            android:textFontWeight="600"
            android:background="@drawable/background_button"
            app:layout_constraintEnd_toEndOf="@id/et_pw"
            app:layout_constraintStart_toStartOf="@id/et_pw"
            app:layout_constraintTop_toBottomOf="@id/tv_register" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>