<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="signUpViewModel"
            type="com.example.sopt27.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".signup.SignUpActivity">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/name"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="55dp"
            android:inputType="text"
            android:hint="@string/hint_name"
            android:text="@={signUpViewModel.name}"
            android:padding="10dp"
            android:background="@drawable/background_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/id"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_name" />

        <EditText
            android:id="@+id/et_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:hint="@string/hint_id"
            android:text="@={signUpViewModel.id}"
            android:padding="10dp"
            android:background="@drawable/background_edit_text"
            app:layout_constraintEnd_toEndOf="@id/et_name"
            app:layout_constraintStart_toStartOf="@id/et_name"
            app:layout_constraintTop_toBottomOf="@id/tv_id" />

        <TextView
            android:id="@+id/tv_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/password"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_id" />

        <EditText
            android:id="@+id/et_pw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:hint="@string/hint_password"
            android:text="@={signUpViewModel.password}"
            android:padding="10dp"
            android:background="@drawable/background_edit_text"
            app:layout_constraintEnd_toEndOf="@id/et_name"
            app:layout_constraintStart_toStartOf="@id/et_name"
            app:layout_constraintTop_toBottomOf="@id/tv_pw" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/register"
            android:background="@drawable/background_button"
            app:layout_constraintEnd_toEndOf="@id/et_pw"
            app:layout_constraintStart_toStartOf="@id/et_pw"
            app:layout_constraintTop_toBottomOf="@id/et_pw" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>